@@ -50,6 +50,15 @@ enum mf_field_id {
     MFF_REG4,                   /* be32 */
 #endif
 #if FLOW_N_REGS > 5
+    MFF_REG5,                   /* be32 */
+#endif
+#if FLOW_N_REGS > 6
+    MFF_REG6,                   /* be32 */
+#endif
+#if FLOW_N_REGS > 7
+    MFF_REG7,                   /* be32 */
+#endif
+#if FLOW_N_REGS > 8
 #error
 #endif
 
